sdk/rust/target/debug/build/luxfhe-a08a4af7c8ea8a90/out/bindings.rs

/* automatically generated by rust-bindgen 0.71.1 */

pub const LUXFHE_VERSION_MAJOR: u32 = 1;
pub const LUXFHE_VERSION_MINOR: u32 = 0;
pub const LUXFHE_VERSION_PATCH: u32 = 0;
pub const LUXFHE_VERSION_STRING: &[u8; 6] = b"1.0.0\0";
pub const LuxFHE_Error_LUXFHE_OK: LuxFHE_Error = 0;
pub const LuxFHE_Error_LUXFHE_ERR_NULL_POINTER: LuxFHE_Error = -1;
pub const LuxFHE_Error_LUXFHE_ERR_INVALID_PARAM: LuxFHE_Error = -2;
pub const LuxFHE_Error_LUXFHE_ERR_ALLOCATION: LuxFHE_Error = -3;
pub const LuxFHE_Error_LUXFHE_ERR_NOT_INITIALIZED: LuxFHE_Error = -4;
pub const LuxFHE_Error_LUXFHE_ERR_KEY_NOT_SET: LuxFHE_Error = -5;
pub const LuxFHE_Error_LUXFHE_ERR_SERIALIZATION: LuxFHE_Error = -6;
pub const LuxFHE_Error_LUXFHE_ERR_DESERIALIZATION: LuxFHE_Error = -7;
pub const LuxFHE_Error_LUXFHE_ERR_OPERATION: LuxFHE_Error = -8;
pub const LuxFHE_Error_LUXFHE_ERR_TYPE_MISMATCH: LuxFHE_Error = -9;
pub const LuxFHE_Error_LUXFHE_ERR_OUT_OF_RANGE: LuxFHE_Error = -10;
pub type LuxFHE_Error = ::std::os::raw::c_int;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LuxFHE_Context_s {
    _unused: [u8; 0],
}
pub type LuxFHE_Context = *mut LuxFHE_Context_s;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LuxFHE_SecretKey_s {
    _unused: [u8; 0],
}
pub type LuxFHE_SecretKey = *mut LuxFHE_SecretKey_s;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LuxFHE_PublicKey_s {
    _unused: [u8; 0],
}
pub type LuxFHE_PublicKey = *mut LuxFHE_PublicKey_s;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LuxFHE_BootstrapKey_s {
    _unused: [u8; 0],
}
pub type LuxFHE_BootstrapKey = *mut LuxFHE_BootstrapKey_s;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LuxFHE_Ciphertext_s {
    _unused: [u8; 0],
}
pub type LuxFHE_Ciphertext = *mut LuxFHE_Ciphertext_s;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LuxFHE_Integer_s {
    _unused: [u8; 0],
}
pub type LuxFHE_Integer = *mut LuxFHE_Integer_s;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LuxFHE_Encryptor_s {
    _unused: [u8; 0],
}
pub type LuxFHE_Encryptor = *mut LuxFHE_Encryptor_s;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LuxFHE_Decryptor_s {
    _unused: [u8; 0],
}
pub type LuxFHE_Decryptor = *mut LuxFHE_Decryptor_s;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LuxFHE_Evaluator_s {
    _unused: [u8; 0],
}
pub type LuxFHE_Evaluator = *mut LuxFHE_Evaluator_s;
pub const LuxFHE_ParamSet_LUXFHE_PARAMS_PN10QP27: LuxFHE_ParamSet = 0;
pub const LuxFHE_ParamSet_LUXFHE_PARAMS_PN11QP54: LuxFHE_ParamSet = 1;
pub type LuxFHE_ParamSet = ::std::os::raw::c_uint;
unsafe extern "C" {
    pub fn luxfhe_version() -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn luxfhe_version_info(
        major: *mut ::std::os::raw::c_int,
        minor: *mut ::std::os::raw::c_int,
        patch: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn luxfhe_error_string(err: LuxFHE_Error) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn luxfhe_context_new(params: LuxFHE_ParamSet, out: *mut LuxFHE_Context) -> LuxFHE_Error;
}
unsafe extern "C" {
    pub fn luxfhe_context_free(ctx: LuxFHE_Context);
}
unsafe extern "C" {
    pub fn luxfhe_context_params(
        ctx: LuxFHE_Context,
        n_lwe: *mut ::std::os::raw::c_int,
        n_br: *mut ::std::os::raw::c_int,
        q_lwe: *mut u64,
        q_br: *mut u64,
    ) -> LuxFHE_Error;
}
unsafe extern "C" {
    pub fn luxfhe_keygen_secret(ctx: LuxFHE_Context, out: *mut LuxFHE_SecretKey) -> LuxFHE_Error;
}
unsafe extern "C" {
    pub fn luxfhe_keygen_public(
        ctx: LuxFHE_Context,
        sk: LuxFHE_SecretKey,
        out: *mut LuxFHE_PublicKey,
    ) -> LuxFHE_Error;
}
unsafe extern "C" {
    pub fn luxfhe_keygen_bootstrap(
        ctx: LuxFHE_Context,
        sk: LuxFHE_SecretKey,
        out: *mut LuxFHE_BootstrapKey,
    ) -> LuxFHE_Error;
}
unsafe extern "C" {
    pub fn luxfhe_keygen_all(
        ctx: LuxFHE_Context,
        sk: *mut LuxFHE_SecretKey,
        pk: *mut LuxFHE_PublicKey,
        bsk: *mut LuxFHE_BootstrapKey,
    ) -> LuxFHE_Error;
}
unsafe extern "C" {
    pub fn luxfhe_secretkey_free(sk: LuxFHE_SecretKey);
}
unsafe extern "C" {
    pub fn luxfhe_publickey_free(pk: LuxFHE_PublicKey);
}
unsafe extern "C" {
    pub fn luxfhe_bootstrapkey_free(bsk: LuxFHE_BootstrapKey);
}
unsafe extern "C" {
    pub fn luxfhe_encryptor_new_sk(
        ctx: LuxFHE_Context,
        sk: LuxFHE_SecretKey,
        out: *mut LuxFHE_Encryptor,
    ) -> LuxFHE_Error;
}
unsafe extern "C" {
    pub fn luxfhe_encryptor_new_pk(
        ctx: LuxFHE_Context,
        pk: LuxFHE_PublicKey,
        out: *mut LuxFHE_Encryptor,
    ) -> LuxFHE_Error;
}
unsafe extern "C" {
    pub fn luxfhe_decryptor_new(
        ctx: LuxFHE_Context,
        sk: LuxFHE_SecretKey,
        out: *mut LuxFHE_Decryptor,
    ) -> LuxFHE_Error;
}
unsafe extern "C" {
    pub fn luxfhe_evaluator_new(
        ctx: LuxFHE_Context,
        bsk: LuxFHE_BootstrapKey,
        sk: LuxFHE_SecretKey,
        out: *mut LuxFHE_Evaluator,
    ) -> LuxFHE_Error;
}
unsafe extern "C" {
    pub fn luxfhe_encryptor_free(enc: LuxFHE_Encryptor);
}
unsafe extern "C" {
    pub fn luxfhe_decryptor_free(dec: LuxFHE_Decryptor);
}
unsafe extern "C" {
    pub fn luxfhe_evaluator_free(eval: LuxFHE_Evaluator);
}
unsafe extern "C" {
    pub fn luxfhe_encrypt_bool(
        enc: LuxFHE_Encryptor,
        value: bool,
        out: *mut LuxFHE_Ciphertext,
    ) -> LuxFHE_Error;
}
unsafe extern "C" {
    pub fn luxfhe_decrypt_bool(
        dec: LuxFHE_Decryptor,
        ct: LuxFHE_Ciphertext,
        out: *mut bool,
    ) -> LuxFHE_Error;
}
unsafe extern "C" {
    pub fn luxfhe_ciphertext_free(ct: LuxFHE_Ciphertext);
}
unsafe extern "C" {
    pub fn luxfhe_ciphertext_clone(
        ct: LuxFHE_Ciphertext,
        out: *mut LuxFHE_Ciphertext,
    ) -> LuxFHE_Error;
}
unsafe extern "C" {
    pub fn luxfhe_encrypt_byte(
        enc: LuxFHE_Encryptor,
        value: u8,
        out: *mut LuxFHE_Integer,
    ) -> LuxFHE_Error;
}
unsafe extern "C" {
    pub fn luxfhe_decrypt_byte(
        dec: LuxFHE_Decryptor,
        ct: LuxFHE_Integer,
        out: *mut u8,
    ) -> LuxFHE_Error;
}
unsafe extern "C" {
    pub fn luxfhe_encrypt_uint16(
        enc: LuxFHE_Encryptor,
        value: u16,
        out: *mut LuxFHE_Integer,
    ) -> LuxFHE_Error;
}
unsafe extern "C" {
    pub fn luxfhe_encrypt_uint32(
        enc: LuxFHE_Encryptor,
        value: u32,
        out: *mut LuxFHE_Integer,
    ) -> LuxFHE_Error;
}
unsafe extern "C" {
    pub fn luxfhe_encrypt_uint64(
        enc: LuxFHE_Encryptor,
        value: u64,
        out: *mut LuxFHE_Integer,
    ) -> LuxFHE_Error;
}
unsafe extern "C" {
    pub fn luxfhe_decrypt_uint16(
        dec: LuxFHE_Decryptor,
        ct: LuxFHE_Integer,
        out: *mut u16,
    ) -> LuxFHE_Error;
}
unsafe extern "C" {
    pub fn luxfhe_decrypt_uint32(
        dec: LuxFHE_Decryptor,
        ct: LuxFHE_Integer,
        out: *mut u32,
    ) -> LuxFHE_Error;
}
unsafe extern "C" {
    pub fn luxfhe_decrypt_uint64(
        dec: LuxFHE_Decryptor,
        ct: LuxFHE_Integer,
        out: *mut u64,
    ) -> LuxFHE_Error;
}
unsafe extern "C" {
    pub fn luxfhe_integer_free(ct: LuxFHE_Integer);
}
unsafe extern "C" {
    pub fn luxfhe_integer_clone(ct: LuxFHE_Integer, out: *mut LuxFHE_Integer) -> LuxFHE_Error;
}
unsafe extern "C" {
    pub fn luxfhe_integer_bitwidth(ct: LuxFHE_Integer) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn luxfhe_not(
        eval: LuxFHE_Evaluator,
        ct: LuxFHE_Ciphertext,
        out: *mut LuxFHE_Ciphertext,
    ) -> LuxFHE_Error;
}
unsafe extern "C" {
    pub fn luxfhe_and(
        eval: LuxFHE_Evaluator,
        ct1: LuxFHE_Ciphertext,
        ct2: LuxFHE_Ciphertext,
        out: *mut LuxFHE_Ciphertext,
    ) -> LuxFHE_Error;
}
unsafe extern "C" {
    pub fn luxfhe_or(
        eval: LuxFHE_Evaluator,
        ct1: LuxFHE_Ciphertext,
        ct2: LuxFHE_Ciphertext,
        out: *mut LuxFHE_Ciphertext,
    ) -> LuxFHE_Error;
}
unsafe extern "C" {
    pub fn luxfhe_xor(
        eval: LuxFHE_Evaluator,
        ct1: LuxFHE_Ciphertext,
        ct2: LuxFHE_Ciphertext,
        out: *mut LuxFHE_Ciphertext,
    ) -> LuxFHE_Error;
}
unsafe extern "C" {
    pub fn luxfhe_nand(
        eval: LuxFHE_Evaluator,
        ct1: LuxFHE_Ciphertext,
        ct2: LuxFHE_Ciphertext,
        out: *mut LuxFHE_Ciphertext,
    ) -> LuxFHE_Error;
}
unsafe extern "C" {
    pub fn luxfhe_nor(
        eval: LuxFHE_Evaluator,
        ct1: LuxFHE_Ciphertext,
        ct2: LuxFHE_Ciphertext,
        out: *mut LuxFHE_Ciphertext,
    ) -> LuxFHE_Error;
}
unsafe extern "C" {
    pub fn luxfhe_xnor(
        eval: LuxFHE_Evaluator,
        ct1: LuxFHE_Ciphertext,
        ct2: LuxFHE_Ciphertext,
        out: *mut LuxFHE_Ciphertext,
    ) -> LuxFHE_Error;
}
unsafe extern "C" {
    pub fn luxfhe_mux(
        eval: LuxFHE_Evaluator,
        sel: LuxFHE_Ciphertext,
        ct_true: LuxFHE_Ciphertext,
        ct_false: LuxFHE_Ciphertext,
        out: *mut LuxFHE_Ciphertext,
    ) -> LuxFHE_Error;
}
unsafe extern "C" {
    pub fn luxfhe_and3(
        eval: LuxFHE_Evaluator,
        ct1: LuxFHE_Ciphertext,
        ct2: LuxFHE_Ciphertext,
        ct3: LuxFHE_Ciphertext,
        out: *mut LuxFHE_Ciphertext,
    ) -> LuxFHE_Error;
}
unsafe extern "C" {
    pub fn luxfhe_or3(
        eval: LuxFHE_Evaluator,
        ct1: LuxFHE_Ciphertext,
        ct2: LuxFHE_Ciphertext,
        ct3: LuxFHE_Ciphertext,
        out: *mut LuxFHE_Ciphertext,
    ) -> LuxFHE_Error;
}
unsafe extern "C" {
    pub fn luxfhe_majority(
        eval: LuxFHE_Evaluator,
        ct1: LuxFHE_Ciphertext,
        ct2: LuxFHE_Ciphertext,
        ct3: LuxFHE_Ciphertext,
        out: *mut LuxFHE_Ciphertext,
    ) -> LuxFHE_Error;
}
unsafe extern "C" {
    pub fn luxfhe_int_add(
        eval: LuxFHE_Evaluator,
        a: LuxFHE_Integer,
        b: LuxFHE_Integer,
        out: *mut LuxFHE_Integer,
    ) -> LuxFHE_Error;
}
unsafe extern "C" {
    pub fn luxfhe_int_sub(
        eval: LuxFHE_Evaluator,
        a: LuxFHE_Integer,
        b: LuxFHE_Integer,
        out: *mut LuxFHE_Integer,
    ) -> LuxFHE_Error;
}
unsafe extern "C" {
    pub fn luxfhe_int_neg(
        eval: LuxFHE_Evaluator,
        a: LuxFHE_Integer,
        out: *mut LuxFHE_Integer,
    ) -> LuxFHE_Error;
}
unsafe extern "C" {
    pub fn luxfhe_int_mul(
        eval: LuxFHE_Evaluator,
        a: LuxFHE_Integer,
        b: LuxFHE_Integer,
        out: *mut LuxFHE_Integer,
    ) -> LuxFHE_Error;
}
unsafe extern "C" {
    pub fn luxfhe_int_add_scalar(
        eval: LuxFHE_Evaluator,
        a: LuxFHE_Integer,
        scalar: i64,
        out: *mut LuxFHE_Integer,
    ) -> LuxFHE_Error;
}
unsafe extern "C" {
    pub fn luxfhe_int_mul_scalar(
        eval: LuxFHE_Evaluator,
        a: LuxFHE_Integer,
        scalar: i64,
        out: *mut LuxFHE_Integer,
    ) -> LuxFHE_Error;
}
unsafe extern "C" {
    pub fn luxfhe_int_eq(
        eval: LuxFHE_Evaluator,
        a: LuxFHE_Integer,
        b: LuxFHE_Integer,
        out: *mut LuxFHE_Ciphertext,
    ) -> LuxFHE_Error;
}
unsafe extern "C" {
    pub fn luxfhe_int_ne(
        eval: LuxFHE_Evaluator,
        a: LuxFHE_Integer,
        b: LuxFHE_Integer,
        out: *mut LuxFHE_Ciphertext,
    ) -> LuxFHE_Error;
}
unsafe extern "C" {
    pub fn luxfhe_int_lt(
        eval: LuxFHE_Evaluator,
        a: LuxFHE_Integer,
        b: LuxFHE_Integer,
        out: *mut LuxFHE_Ciphertext,
    ) -> LuxFHE_Error;
}
unsafe extern "C" {
    pub fn luxfhe_int_le(
        eval: LuxFHE_Evaluator,
        a: LuxFHE_Integer,
        b: LuxFHE_Integer,
        out: *mut LuxFHE_Ciphertext,
    ) -> LuxFHE_Error;
}
unsafe extern "C" {
    pub fn luxfhe_int_gt(
        eval: LuxFHE_Evaluator,
        a: LuxFHE_Integer,
        b: LuxFHE_Integer,
        out: *mut LuxFHE_Ciphertext,
    ) -> LuxFHE_Error;
}
